# dash-scraping-societe

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: constants.py  dash_scraping_societe.py
